--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Paid-Course</title>
+    <title>Paid-Course 80%- Discount</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -181,10 +181,11 @@
     </div>
     <!-- ================icon Section================ -->
     <div class="icon">
+        <div class="icon">
         <h2 class="vb" id="oo">Contact Us</h2>
         <div class="icon">
-            <i class="fab fa-youtube p"></i>
-            <i class="fab fa-facebook-square p"></i>
+            <a href="https://www.youtube.com/channel/UC2Q_CpNUZCtqmd1SxLFqbZA"><i class="fab fa-youtube p"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100053828165146"><i class="fab fa-facebook-square p"></i></a>
             <i class="fab fa-twitter-square p"></i>
             <i class="fab fa-whatsapp-square p"></i><br><br>
             <h2 id="vv">My Number<i class="fas fa-hand-point-right g"></i><i class="fas fa-hand-point-right g"></i><i class="fas fa-hand-point-right g"></i></h2>
