--- a/index.html
+++ b/index.html
@@ -181,11 +181,10 @@
     </div>
     <!-- ================icon Section================ -->
     <div class="icon">
-        <div class="icon">
         <h2 class="vb" id="oo">Contact Us</h2>
         <div class="icon">
-            <a href="https://www.youtube.com/channel/UC2Q_CpNUZCtqmd1SxLFqbZA"><i class="fab fa-youtube p"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100053828165146"><i class="fab fa-facebook-square p"></i></a>
+            <a target="blank" href="https://www.youtube.com/channel/UC2Q_CpNUZCtqmd1SxLFqbZA"><i class="fab fa-youtube p"></i></a>
+            <a target="blank" href="https://www.facebook.com/profile.php?id=100053828165146"><i class="fab fa-facebook-square p"></i></a>
             <i class="fab fa-twitter-square p"></i>
             <i class="fab fa-whatsapp-square p"></i><br><br>
             <h2 id="vv">My Number<i class="fas fa-hand-point-right g"></i><i class="fas fa-hand-point-right g"></i><i class="fas fa-hand-point-right g"></i></h2>
