--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Paid-Course 80%- Discount</title>
+    <title>Paid-Course</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -71,7 +71,7 @@
                         <p><span  class="k1">We Provide Best Service</span></p>
                         <p><span  class="k1">80%- Discount For 3 Days</span></p>
                         <p><span  class="k1">Full Course Just 2 Mounth</span></p>
-                        <p><span  class="k1">ptatibus laud antium sit</span></p>
+                        <p><span  class="k1">We Have Best Teacher</span></p>
                         <p><span  class="k1">So, Pleas Join Quickly We Waiting For You</span></p>
                         
                     </div>
@@ -83,7 +83,7 @@
                         <p><span  class="k1">We Provide Best Service</span></p>
                         <p><span  class="k1">80%- Discount For 3 Days</span></p>
                         <p><span  class="k1">Full Course Just 2 Mounth</span></p>
-                        <p><span  class="k1">ptatibus laud antium sit</span></p>
+                        <p><span  class="k1">We Have Best Teacher</span></p>
                         <p><span  class="k1">So, Pleas Join Quickly We Waiting For You</span></p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <p><span  class="k1">We Provide Best Service</span></p>
                         <p><span  class="k1">80%- Discount For 3 Days</span></p>
                         <p><span  class="k1">Full Course Just 2 Mounth</span></p>
-                        <p><span  class="k1">ptatibus laud antium sit</span></p>
+                        <p><span  class="k1">We Have Best Teacher</span></p>
                         <p><span  class="k1">So, Pleas Join Quickly We Waiting For You</span></p>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         <p><span  class="k1">We Provide Best Service</span></p>
                         <p><span  class="k1">80%- Discount For 3 Days</span></p>
                         <p><span  class="k1">Full Course Just 2 Mounth</span></p>
-                        <p><span  class="k1">ptatibus laud antium sit</span></p>
+                        <p><span  class="k1">We Have Best Teacher</span></p>
                         <p><span  class="k1">So, Pleas Join Quickly We Waiting For You</span></p>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2><a target="blank" href="https://www.facebook.com/profile.php?id=100053828165146">About Our All Course</a></h2>
+                    <h2><a target="blank" href="https://www.facebook.com/profile.php?id=100053828165146">About Our All Course</a></h2><br><br>
                     <p>Pleas Click About Our All Course</p>
                 </div>
             </div>
@@ -183,11 +183,11 @@
     <div class="icon">
         <h2 class="vb" id="oo">Contact Us</h2>
         <div class="icon">
-            <a target="blank" href="https://www.youtube.com/channel/UC2Q_CpNUZCtqmd1SxLFqbZA"><i class="fab fa-youtube p"></i></a>
-            <a target="blank" href="https://www.facebook.com/profile.php?id=100053828165146"><i class="fab fa-facebook-square p"></i></a>
-            <i class="fab fa-twitter-square p"></i>
-            <i class="fab fa-whatsapp-square p"></i><br><br>
-            <h2 id="vv">My Number<i class="fas fa-hand-point-right g"></i><i class="fas fa-hand-point-right g"></i><i class="fas fa-hand-point-right g"></i></h2>
+            <a target="blank" href="https://www.youtube.com/channel/UC2Q_CpNUZCtqmd1SxLFqbZA"><i class="fab fa-youtube p a"></i></a>
+            <a target="blank" href="https://www.facebook.com/profile.php?id=100053828165146"><i class="fab fa-facebook-square p b"></i></a>
+            <i class="fab fa-twitter-square p c"></i>
+            <i class="fab fa-whatsapp-square p d"></i><br><br>
+            <h2 class="popo" id="vv">My Number<i class="fas fa-hand-point-right g"></i><i class="fas fa-hand-point-right g"></i><i class="fas fa-hand-point-right g"></i></h2>
             <h2>01765058443</h2>
         </div>
     </div>
